--- a/_config.yml
+++ b/_config.yml
@@ -5,8 +5,8 @@ description: Tutorial for BLAS, LAPACK, SCALAPACK, including both dense and spar
 lang: en-US
 encoding: UTF-8
 
-baseurl: "docs-matrix-library" # the subpath of your site, e.g. /blog/
-url: https://ericzhng.github.io/ # the base hostname & protocol for your site
+baseurl: "" # the subpath of your site, e.g. /blog/
+url: https://ericzhng.github.io/docs-matrix-library/ # the base hostname & protocol for your site
 git_address: https://github.com/ericzhng/matrix-library
 #git_edit_address: https://github.com/UniversalSplitScreen/UniversalSplitScreen.github.io/blob/gh-pages
 
