--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ encoding: UTF-8
 baseurl: "/docs-matrix-library" # the subpath of your site, e.g. /blog/
 url: https://ericzhng.github.io # the base hostname & protocol for your site
 git_address: https://github.com/ericzhng/matrix-library
-#git_edit_address: https://github.com/UniversalSplitScreen/UniversalSplitScreen.github.io/blob/gh-pages
+git_edit_address: https://github.com/ericzhng/docs-matrix-library/tree/master
 
 # theme options from https://bootswatch.com/
 # comment out this to use default Bootstrap
