--- a/_data/docs.yml
+++ b/_data/docs.yml
@@ -5,4 +5,9 @@
 
 - title: Game Guides
   docs:
-  - guides/borderlands2
+  - borderlands2
+  - quickstart1
+  - quickstart2
+  - quickstart3
+  - importantnotes
+
